--- a/google-book-search-mern/src/components/Header/style.css
+++ b/google-book-search-mern/src/components/Header/style.css
@@ -3,4 +3,7 @@
     height: 250px;
     color: white;
     font-weight: bold;
+    text-align: center;
+    letter-spacing: 1px; 
+    text-shadow: 2px 2px 4px #000000;
 }
